# fundamentals_databricks_pj

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  README.md  fly.toml  pyproject.toml  recover_financials_raw.py  render.yaml  requirements-dev.txt  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release-screener.yml  sync-databricks.yml
FA PJ (Basic)/: 01_loading_AAPL_sec_file.ipynb  02_extracting_tables.ipynb  03_clean_and_transform.ipynb  fundamentals_databricks_pj
FA PJ (Basic)/00_config/: 01__tickers.py  02__favorites.ipynb  02__tickers_master.ipynb  02__tickers_master.py  03__concept_hierarchy_master.ipynb  03__concept_hierarchy_master.py  03__tickers_master.ipynb  04__metrics_hierarchy_master.ipynb  04__metrics_hierarchy_master.py  favorites.json  metrics_hierarchy.json
FA PJ (Basic)/10_ingestion/: 11__fetch_sec_xbrl.ipynb  11__fetch_sec_xbrl.py  12__fetch_market_data.py
FA PJ (Basic)/20_transformation/: 21__clean_and_merge.py  21b__derive_quarterly.py  21c__prune_quarterly.py  22__derived_metrics.ipynb  22__derived_metrics.py  23__intrinsic_value.py
FA PJ (Basic)/30_analysis/: 31__company_analysis.py
FA PJ (Basic)/40_dashboards/: 41__dashboard_queries.py  Main Dashboard.lvdash.json
FA PJ (Basic)/50_publish/: 51__export_dashboard_data.py  52__publish_to_github.py  README.md
FA PJ (Basic)/51_streamlit_app/: .gitignore  README.md  app.py  fetch_fixtures.py  generate_russell2000_fixtures.py  requirements.txt
FA PJ (Basic)/90_pipelines/: 91__full_pipeline.ipynb  91__full_pipeline.py
FA PJ (Basic)/Old/: 02_extracting_tables.ipynb  03_clean_and_transform.ipynb
docs/: architecture.md  deploy-fly.md  deploy-render.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-django-presentation-and-application-layer.md  0003-strict-layering-with-repository-tier.md  0004-artifact-fed-read-model-via-duckdb.md  0005-uuid-primary-keys-for-application-models.md  0006-repositories-mandatory-for-analytical-storage.md  0007-custom-user-model-from-first-migration.md  README.md
docs/releases/: v1.0.0.md
fundamentals_core/: README.md  __init__.py  splits.py
fundamentals_pipeline/: README.md  __init__.py  aapl_dashboard.html  backtest.py  fx.py  identity.py  periods.py  schemas.py  statement_layout.py  tickers_universe.py  valuation.py
fundamentals_pipeline/00__config/: 01__tickers.py  02__tickers_master.py  03__concept_hierarchy_master.py  04__metrics_hierarchy_master.py  05__POC_quarterly_logic.py  backtest_archetypes.json  concept_hierarchy.json  external_benchmark_config.json  favorites.json  metrics_hierarchy.json  reconciliation_golden_set.json
fundamentals_pipeline/00_config/: 01__tickers.py  02__tickers_master.py  03__concept_hierarchy_master.py  04__metrics_hierarchy_master.py  05__POC_quarterly_logic.py  backtest_archetypes.json  concept_hierarchy.json  favorites.json  metrics_hierarchy.json  reconciliation_golden_set.json  valuation_assumptions.json
fundamentals_pipeline/10__ingestion/: 11__fetch_sec_xbrl.py  12__fetch_market_data.py  13__fetch_dimensional_10k.py  14__fetch_oracle_statements.py
fundamentals_pipeline/10_ingestion/: 11__fetch_sec_xbrl.py  12__fetch_market_data.py  13__fetch_dimensional_10k.py  14__fetch_oracle_statements.py
fundamentals_pipeline/20__transformation/: 21__clean_and_merge.py  21b__derive_quarterly.py  21c__prune_quarterly.py  21d__dedup_clean_table.py  21e__derive_fy_from_quarterly.py  21f__dedup_balance_sheet.py  21g__dedup_flow_orphans.py  22__derived_metrics.py  23__intrinsic_value.py
fundamentals_pipeline/20_transformation/: 21__clean_and_merge.py  21b__derive_quarterly.py  21c__prune_quarterly.py  21d__dedup_clean_table.py  21e__derive_fy_from_quarterly.py  21f__dedup_balance_sheet.py  21g__dedup_flow_orphans.py  22__derived_metrics.py  23__intrinsic_value.py
fundamentals_pipeline/30__analysis/: 31__company_analysis.py  32__coverage_check.py  33__fy_staleness_check.py  34__invariants_check.py  35__reconcile_filings.py  36__run_log_report.py  37__split_adjust_check.py  38__history_audit.py  39__external_benchmark_check.py
fundamentals_pipeline/30_analysis/: 31__company_analysis.py  32__coverage_check.py  33__fy_staleness_check.py  33__history_audit.py  34__invariants_check.py  35__reconcile_filings.py  36__run_log_report.py  37__split_adjust_check.py
fundamentals_pipeline/40_dashboards/: Main Dashboard.lvdash.json
fundamentals_pipeline/50__publish/: 51__export_dashboard_data.py  52__publish_to_github.py  53__republish.py  README.md
fundamentals_pipeline/50_publish/: 51__export_dashboard_data.py  52__publish_to_github.py  53__republish.py  README.md
fundamentals_pipeline/51_streamlit_app/: .gitignore  README.md  app.py  fetch_fixtures.py  styles.css
fundamentals_pipeline/60_streamlit_app/: .gitignore  README.md  app.py  fetch_fixtures.py  notes.json  (+2 more)
fundamentals_screener/: README.md  pyproject.toml
fundamentals_screener/fundamentals_screener/: apps.py  charts.py  currency.py  data_source.py  dtos.py  football.py  news.py  pricechart.py  repository.py  services.py  urls.py  views.py
fundamentals_screener/fundamentals_screener/management/commands/: sync_fundamentals_data.py
fundamentals_screener/fundamentals_screener/repositories/: __init__.py  base.py  companies.py  company_listing.py  screener.py  valuation.py
fundamentals_screener/fundamentals_screener/static/fundamentals_screener/css/: app.css
fundamentals_screener/fundamentals_screener/templates/fundamentals_screener/: _derived_metrics.html  _screen_results.html  base_screener.html  company_detail.html  screen.html  valuation.html
fundamentals_screener/fundamentals_screener/templatetags/: fmt.py  logos.py
fundamentals_screener/tests/: test_benchmark.py
tests/: conftest.py  test_backtest.py  test_fx.py  test_identity.py  test_news.py  test_periods.py  test_schemas.py  test_splits.py  test_statement_layout.py  test_streamlit_lib.py  test_tickers_universe.py  test_valuation.py
web/: .coveragerc  .env.example  api-schema.yml  manage.py  mypy.ini  pytest.ini
(+287 files in other folders)
