[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fundamentals-pipeline"
version = "0.1.0"
description = "The project's pipeline package: the export/app schema contract and the pure-Python financial reference logic (valuation, backtest, period arithmetic, splits). Imported as a standard installable package by the Databricks pipeline, the tests, and the Django web app — no sys.path manipulation. No Spark / Databricks / Streamlit / Django dependency in the importable modules."
readme = "fundamentals_pipeline/README.md"
requires-python = ">=3.10"
dependencies = []

# `fundamentals_pipeline` is the one importable package. Its NN__ subdirectories
# (00__config, 10__ingestion, …, 60__frontends) are Databricks notebook sources, not
# importable sub-packages (digit-prefixed names aren't valid module names), so setuptools
# must NOT auto-discover — the package list is pinned explicitly.
[tool.setuptools]
packages = ["fundamentals_pipeline"]
